book container class style modified to solve footer overlapping

--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,7 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  padding-bottom: 50pt;
 }
 
 .footer {
